# fun-with-python

./: LICENSE  README.md  pyproject.toml
src/fun_with_python/: __init__.py  console.py
src/fun_with_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
