[tool.poetry]
name = "fun-with-python"
version = "0.1.0"
description = "The hypermodern Python project as proposed by https://cjolowicz.github.io/posts/hypermodern-python-01-setup/"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gonthar/fun-with-python" 
repository = "https://github.com/gonthar/fun-with-python"
keywords = ["hypermodern"] 
authors = ["Maciej Gontar <maciej.gontar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.scripts]
fun-with-python = "fun_with_python.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
